@@ -1,6 +1,9 @@
 Changes from jTDS 0.8.1
 =========================
 
+07/21/2004 - Brian Heineman
+ o Added test for bug [994988] Network error when null is returned via int output parm
+
 07/20/2004 - Brian Heineman
  o Added test for bug [974284] retval on callable statement isn't handled correctly
  o Added test for bug [994888] Callable statement and Float output parameter
